# crmsolar

./: .env  .gitignore  Procfile  PythonJet Pages.HTML  aplicacao-interativa-crmsolar.html  cloudbuild.yaml  db.sqlite3  dockerfile  entrypoint.sh  index.html  requirements.txt  svg.py  teste_api.py  teste_api_consulta.py  teste_api_envio.py
Desktop/codex-IA/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
Desktop/codex-IA/codex_ia/: __init__.py  main.py
Desktop/codex-IA/codex_ia/core/: context.py  llm_client.py
Desktop/crmsolar/: Dockerfile  Dockerfile.old  Guia Interativo do CRM Solar.html  Procfile  db.sqlite3  docker-compose.yml  entrypoint.sh  entrypoint.sh.old  listar_modelos.py  rastrear_proposta.html  requirements.txt
Desktop/edufuturo/: .env  Dockerfile  db.sqlite3  docker-compose.yml
compra-coletiva/: .dockerignore  .gitignore  Dockerfile  Procfile  db.sqlite3  deploy.sh  docker-compose.yml  manage.py  populate_data.py  requirements.txt
compra-coletiva/compras/: admin.py  models.py  urls.py  (+1 more)
contratacoes/: ai_services.py  forms.py  models.py  urls.py  views.py
core/: context_processors.py  models.py  urls.py  views.py
energia_solar/: settings.py
financeiro/: urls.py  views.py
integracao_audesp/: client.py  exceptions.py  mappers.py  services.py  urls.py  views.py
licitacoes/: forms.py  models.py  urls.py  views.py
mp_integracao/: apps.py  test_mp.py  urls.py
pagamento/: urls.py
produtos/: admin.py  models.py  urls.py  views.py
solar/: admin.py  forms.py  models.py  urls.py  views.py
sysgov_project/: settings.py
(+357 files in other folders)
